add footer image

--- a/index.html
+++ b/index.html
@@ -373,7 +373,12 @@
     </footer> -->
 
     <footer>
+
         Carlos Turrión &copy; 2023
+        <div class="img-footer">
+            <img src="corvusTurrim.svg" alt="ERROR">
+        </div>
+
     </footer>
 
 
