--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>CarlosTurrionCV</title>
     <link rel="stylesheet" href="generalStyle.css">
 
-    <script src="translation.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <!-- Actualizar link dependiendo de la seccion -->
     <script src="scrollUpdateURL.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="navScroll.js"></script> -->
+
+    <script src="translate.js"></script>
+    <!-- <script src="navScroll.js"></script> -->
 </head>
 
 <body>
     <nav class="navbar">
         <ul class="nav">
-            <li><a href="#about">Carlos Turrion</a> </li>
-            <li> <a href="#skills">Habilidades</a></li>
-            <li><a href="#experience">Experiencia</a></li>
-            <li><a href="#education">Educación</a></li>
-
-            <li><a href="#languages">Idiomas</a>
+            <li><a href="#about-section">Carlos Turrion</a> </li>
+            <li><a href="#skills-section" id="skills"></a></li>
+            <li><a href="#experience-section" id="experience"></a></li>
+            <li><a href="#education-section" id="education"></a></li>
+            <li><a href="#languages-section" id="languages"></a>
                 <ul class="dropdown">
                     <li>
                         <button onclick="changeLanguage('es')" class="buttonLanguage">
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section class="about-section" id="about-section">
         <h2 class="title-section">¡HOLA MUNDO!</h2>
         <p>
             Diseñador 3D convertido en desarrollador
@@ -94,7 +94,7 @@
         <img src="Foto1.png" alt="">
     </section>
 
-    <section class="skills" id="skills">
+    <section class="skills" id="skills-section">
         <h2 class="title-section">Habilidades</h2>
         <div class="divider"></div>
         <div class="cards">
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="experience" id="experience">
+    <section class="experience" id="experience-section">
         <h2 class="title-section">Experiencia</h2>
         <div class="divider"></div>
 
@@ -176,7 +176,7 @@
 
     </section>
 
-    <section class="education" id="education">
+    <section class="education" id="education-section">
         <h2 class="title-section">Educación</h2>
         <div class="divider"></div>
 
@@ -258,7 +258,7 @@
 
     </section>
 
-    <section class="languages" id="languages">
+    <section class="languages-section" id="languages-section">
         <h2 class="title-section">Idiomas</h2>
         <div class="divider"></div>
 
