translate navbar buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav">
-            <li><a href="#about-section">Carlos Turrion</a> </li>
+            <li><a href="#about-section">Carlos Turrion</a></li>
             <li><a href="#skills-section" id="skills"></a></li>
             <li><a href="#experience-section" id="experience"></a></li>
             <li><a href="#education-section" id="education"></a></li>
@@ -33,7 +33,7 @@
                                     xlink:href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg">
                                 </image>
                             </svg>
-                            Español
+                            <p id="spanish"></p>
                         </button>
                     </li>
 
@@ -46,7 +46,7 @@
                                     xlink:href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg">
                                 </image>
                             </svg>
-                            Inglés
+                            <p id="english"></p>
                         </button>
                     </li>
 
@@ -59,7 +59,7 @@
                                     xlink:href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg">
                                 </image>
                             </svg>
-                            Catalán
+                            <p id="catalan"></p>
                         </button>
                     </li>
 
