--- a/index.html
+++ b/index.html
@@ -84,22 +84,17 @@
     </section>
 
     <section class="about-section" id="about-section">
-        <h2 class="title-section">¡HOLA MUNDO!</h2>
-        <p>
-            Diseñador 3D convertido en desarrollador
-            de aplicaciones iOS con pasión por el código creativo.
-            Ahora, embarcándome en el emocionante viaje hacia el
-            desarrollo web frontend.
-        </p>
+        <h2 class="title-section" id="hello-word"></h2>
+        <p id="about-section-p"></p>
         <img src="Foto1.png" alt="">
     </section>
 
     <section class="skills" id="skills-section">
-        <h2 class="title-section">Habilidades</h2>
+        <h2 class="title-section" id="skills-title-section"></h2>
         <div class="divider"></div>
         <div class="cards">
             <div class="vertical card">
-                <h4>Programación</h4>
+                <h4 id="skills-programming"></h4>
                 <p>HTML</p>
                 <p>Css</p>
                 <p>Js</p>
@@ -132,73 +127,70 @@
     </section>
 
     <section class="experience" id="experience-section">
-        <h2 class="title-section">Experiencia</h2>
+        <h2 class="title-section" id="experience-title-section"></h2>
         <div class="divider"></div>
 
         <div class="horizontal card">
             <div class="horizontal-left">
                 <h4>iOS Developer</h4>
-                <h5>2020 - Presente</h5>
+                <h5 id="experience-2020-present"></h5>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">DELOITTE DXD- BARCELONA</p>
-                <p>He trabajado en aplicaciones para Coca cola, Uriach, Viena,
-                    Financiera El Corte Inglés, y Bankinter.
-                </p>
+                <p class="paragraph-title">DELOITTE DXD - BARCELONA</p>
+                <p id="experience-2020-present-p"></p>
             </div>
         </div>
 
         <div class="horizontal card">
             <div class="horizontal-left">
-                <h4>Generalista 3D</h4>
-                <h5>2018 - Presente</h5>
+                <h4 id="experience-3d-generalist-deloitte"></h4>
+                <h5 id="experience-2018-present"></h5>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">DELOITTE DXD- BARCELONA</p>
-                <p>He trabajado para marcas como Coca cola, Gallo, Pescanova, Prosegur, S&P,
-                    Uriach, Banco Santander, Grundig, Danone, Google (Tango), Proske, Clever...
-                </p>
+                <p class="paragraph-title">DELOITTE DXD - BARCELONA</p>
+                <p id="experience-2018-present-p"></p>
             </div>
         </div>
 
         <div class="horizontal card">
             <div class="horizontal-left">
-                <h4>Generalista 3D</h4>
+                <h4 id="experience-3d-generalist-pangea"></h4>
                 <h5>2016 - 2018</h5>
             </div>
             <div class="horizontal-right">
                 <p class="paragraph-title">PANGEA REALITY - BARCELONA</p>
-                <p>Desarrollo de proyectos de realidad aumentada (AR) y realidad virtual (VR) para dispositivos móviles.
-                    Diseño, modelado, texturizado y animación de modelos 3D Programación en C#
-                </p>
+                <p id="experience-2016-2018-p"></p>
             </div>
         </div>
 
     </section>
 
     <section class="education" id="education-section">
-        <h2 class="title-section">Educación</h2>
+        <h2 class="title-section" id="education-title-section"></h2>
         <div class="divider"></div>
+
+
+        <!-- 
+            Add examen ingles B2 
+            noviembre de 2021
+            TOEIC STEP+
+        -->
 
         <div class="horizontal card">
             <div class="horizontal-left">
-                <h4>Sept. 2021</h4>
+                <h4 id="education-september-2021"></h4>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">
-                    Certificado en Amelia, V4 Enablement Training Video Series.
-                </p>
-                <p>Asistente conversacional, Online</p>
+                <p class="paragraph-title" id="education-amelia"></p>
+                <p id="education-amelia-p"></p>
             </div>
         </div>
         <div class="horizontal card">
             <div class="horizontal-left">
-                <h4>Julio 2021</h4>
+                <h4 id="education-july-2021"></h4>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">
-                    Curso en, HTML y CSS
-                </p>
+                <p class="paragraph-title" id="education-html-css-course"></p>
                 <p>
                     Udemy, Jonathan Lifschitz
                 </p>
@@ -206,15 +198,11 @@
         </div>
         <div class="horizontal card">
             <div class="horizontal-left">
-                <h4>Feb. Abril 2021</h4>
+                <h4 id="education-february-april-2021"></h4>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">
-                    iOS & Swift, The Complete iOS App Development Bootcamp
-                </p>
-                <p>
-                    Udemy, Online, 65 horas
-                </p>
+                <p class="paragraph-title" id="education-february-april-2021-title"></p>
+                <p id="education-february-april-2021-p"></p>
             </div>
         </div>
         <div class="horizontal card">
@@ -222,12 +210,8 @@
                 <h4>2014-2016</h4>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">
-                    Curso de Inglés, A2 y B1
-                </p>
-                <p>
-                    Euroidiomes, Barcelona
-                </p>
+                <p class="paragraph-title" id="education-2014-2016-title"></p>
+                <p id="education-2014-2016-p"></p>
             </div>
         </div>
         <div class="horizontal card">
@@ -235,11 +219,8 @@
                 <h4>2013-2014</h4>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">
-                    Master en Diseño y Creación de Videojuegos </p>
-                <p>
-                    FX ANIMATION, Barcelona
-                </p>
+                <p class="paragraph-title" id="education-2013-2014-title"></p>
+                <p id="education-2013-2014-p"></p>
             </div>
         </div>
         <div class="horizontal card">
@@ -247,11 +228,8 @@
                 <h4>2009-2011</h4>
             </div>
             <div class="horizontal-right">
-                <p class="paragraph-title">
-                    Grado Superior en Gráfica Publicitaria
-                <p>
-                    Escuela de Arte y Superior de Diseño, Zamora
-                </p>
+                <p class="paragraph-title" id="education-2009-2011-title"></p>
+                <p id="education-2009-2011-p"></p>
             </div>
         </div>
 
@@ -259,12 +237,12 @@
     </section>
 
     <section class="languages-section" id="languages-section">
-        <h2 class="title-section">Idiomas</h2>
+        <h2 class="title-section" id="languages-title-section"></h2>
         <div class="divider"></div>
 
         <div class="horizontal card">
             <div class="language">
-                <h4>Español</h4>
+                <h4 id="languages-english"></h4>
             </div>
             <ul class="points">
                 <li>
@@ -280,21 +258,20 @@
                     <div class="point"></div>
                 </li>
                 <li>
-                    <div class="point"></div>
+                    <div class="point pointless"></div>
                 </li>
                 <li>
-                    <div class="point"></div>
+                    <div class="point pointless"></div>
                 </li>
             </ul>
-
             <div class="language-level">
-                <h5>Avanzado-Alto (C2)</h5>
+                <h5 id="languages-english-level"></h5>
             </div>
         </div>
 
         <div class="horizontal card">
             <div class="language">
-                <h4>Catalán</h4>
+                <h4 id="languages-catalan"></h4>
             </div>
             <ul class="points">
                 <li>
@@ -317,13 +294,13 @@
                 </li>
             </ul>
             <div class="language-level">
-                <h5>Intermedio-Alto (B2)</h5>
+                <h5 id="languages-catalan-level"></h5>
             </div>
         </div>
 
         <div class="horizontal card">
             <div class="language">
-                <h4>Inglés</h4>
+                <h4 id="languages-spanish"></h4>
             </div>
             <ul class="points">
                 <li>
@@ -339,14 +316,15 @@
                     <div class="point"></div>
                 </li>
                 <li>
-                    <div class="point pointless"></div>
+                    <div class="point"></div>
                 </li>
                 <li>
-                    <div class="point pointless"></div>
+                    <div class="point"></div>
                 </li>
             </ul>
+
             <div class="language-level">
-                <h5>Intermedio-Alto (B2)</h5>
+                <h5 id="languages-spanish-level"></h5>
             </div>
         </div>
 
