translate to catalan

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
 
                     <li>
-                        <button class="buttonLanguage">
+                        <button onclick="changeLanguage('ca')" class="buttonLanguage">
                             <svg viewBox="0 2244 82 66" data-test="flag-en" style="height: 28.9756px; width: 36px;">
                                 <image height="3168"
                                     href="https://d35aaqx5ub95lt.cloudfront.net/vendor/87938207afff1598611ba626a8c4827c.svg"
@@ -118,7 +118,7 @@
 
             <div class="vertical card">
                 <h4>2D</h4>
-                <p>Photosop</p>
+                <p>Photoshop</p>
                 <p>Figma</p>
                 <p>Illustrator</p>
                 <p>Procreate</p>
@@ -178,6 +178,16 @@
 
         <div class="horizontal card">
             <div class="horizontal-left">
+                <h4 id="education-november-2021"></h4>
+            </div>
+            <div class="horizontal-right">
+                <p class="paragraph-title" id="education-november-2021-title"></p>
+                <p id="education-november-2021-p"></p>
+            </div>
+        </div>
+
+        <div class="horizontal card">
+            <div class="horizontal-left">
                 <h4 id="education-september-2021"></h4>
             </div>
             <div class="horizontal-right">
@@ -185,6 +195,7 @@
                 <p id="education-amelia-p"></p>
             </div>
         </div>
+
         <div class="horizontal card">
             <div class="horizontal-left">
                 <h4 id="education-july-2021"></h4>
