download file script

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <!-- Actualizar link dependiendo de la seccion -->
     <script src="scrollUpdateURL.js"></script>
-
     <script src="translate.js"></script>
+    <script src="downloadFile.js"></script>
     <!-- <script src="navScroll.js"></script> -->
+
 </head>
 
 <body>
@@ -342,6 +343,8 @@
     </section>
 
     <footer>
+
+        <button onclick="downloadFile()">Descargar Archivo</button>
 
         Carlos Turrión &copy; 2024
         <div class="img-footer">
