make corvus image a button

--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
 
     <footer>
 
-        <button onclick="downloadFile()">Descargar Archivo</button>
+        <!-- <button onclick="downloadFile()">Descargar Archivo</button> -->
 
         Carlos Turrión &copy; 2024
         <div class="img-footer">
-            <img src="corvusTurrim.svg" alt="ERROR">
+            <img src="corvusTurrim.svg" alt="ERROR" onclick="downloadFile()">
         </div>
 
     </footer>
